# catalyst-networks-open-source

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitleaks.toml  .gitleaksignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build-tailwind.sh  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  healthcheck.py  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
certificates/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  urls_api.py  urls_org.py  views.py
dashboard/: tests.py  urls.py  views.py
docs/: PORT_LEDGER.md  RELEASE_NOTES_v1.1.0.md  RELEASING.md  SELF_HOSTING_SECURITY.md  apps.py  urls.py  views.py
health/: urls.py  views.py
nodes/: admin.py  api_registration.py  api_views.py  apps.py  authentication.py  certificate_paths.py  effective_rules.py  interface.py  models.py  openapi_extensions.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  urls_api.py  urls_org.py  views.py  web_views.py
notifications/: crypto.py  dispatch.py  models.py  signals.py  tasks.py  tests.py  urls_org.py  views.py
open_cvpn/: admin_config.py  asgi.py  celery.py  context_processors.py  email_settings.py  error_handlers.py  exception_handlers.py  middleware.py  response_schemas.py  settings-prod.py  settings.py  tests_admin_security.py  tests_email_settings.py  urls.py  wsgi.py
organizations/: access.py  admin.py  admin_api.py  decorators.py  emails.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  serializers_api.py  tests.py  tests_api.py  tests_invitation_email.py  (+6 more)
(+236 files in other folders)
